@@ -15,3 +15,7 @@ usr/lib/libACE_ETCL_Parser.so
 usr/lib/libACE_Monitor_Control.so
 usr/lib/libACE_ETCL.so
 usr/lib/libACE_gperf_lib.so
+usr/lib/pkgconfig/ACE.pc
+usr/lib/pkgconfig/ACE_ETCL.pc
+usr/lib/pkgconfig/ACE_ETCL_Parser.pc
+usr/lib/pkgconfig/ACEXML_Parser.pc
