@@ -1,2 +1,3 @@
 usr/lib/libACE_FlReactor.so
 usr/include/ace/FlReactor
+usr/lib/pkgconfig/ACE_FlReactor.pc
