@@ -1,2 +1,3 @@
 usr/lib/libACE_FoxReactor.so
 usr/include/ace/FoxReactor
+usr/lib/pkgconfig/ACE_FoxReactor.pc
