@@ -1,2 +1,3 @@
 usr/include/ace/HTBP
 usr/lib/libACE_HTBP.so
+usr/lib/pkgconfig/ACE_HTBP.pc
