@@ -1,2 +1,3 @@
 usr/lib/libACE_QtReactor.so
 usr/include/ace/QtReactor
+usr/lib/pkgconfig/ACE_QtReactor.pc
