@@ -1,2 +1,3 @@
 usr/include/ace/RMCast
 usr/lib/libACE_RMCast.so
+usr/lib/pkgconfig/ACE_RMCast.pc
