@@ -1,2 +1,3 @@
 usr/include/ace/SSL
 usr/lib/libACE_SSL.so
+usr/lib/pkgconfig/ACE_SSL.pc
