@@ -2,3 +2,4 @@ usr/include/ACEXML
 usr/lib/libACEXML.so
 usr/lib/libACEXML_Parser.so
 usr/lib/libACEXML_XML_Svc_Conf_Parser.so
+usr/lib/pkgconfig/ACEXML.pc
