@@ -1,2 +1,3 @@
 usr/include/Kokyu
 usr/lib/libKokyu.so
+usr/lib/pkgconfig/Kokyu.pc
