@@ -77,3 +77,34 @@ usr/lib/libTAO_Monitor.so
 usr/lib/libTAO_IFR_BE.so
 usr/lib/libTAO_IDL_FE.so
 usr/lib/libTAO_IDL_BE.so
+usr/lib/pkgconfig/TAO_RTScheduler.pc
+usr/lib/pkgconfig/TAO_DynamicInterface.pc
+usr/lib/pkgconfig/TAO_ZlibCompressor.pc
+usr/lib/pkgconfig/TAO_AnyTypeCode.pc
+usr/lib/pkgconfig/TAO_Bzip2Compressor.pc
+usr/lib/pkgconfig/TAO_Valuetype.pc
+usr/lib/pkgconfig/TAO_BiDirGIOP.pc
+usr/lib/pkgconfig/TAO_IORInterceptor.pc
+usr/lib/pkgconfig/TAO_SmartProxies.pc
+usr/lib/pkgconfig/TAO_PortableServer.pc
+usr/lib/pkgconfig/TAO_PortableGroup.pc
+usr/lib/pkgconfig/TAO_TypeCodeFactory.pc
+usr/lib/pkgconfig/TAO.pc
+usr/lib/pkgconfig/TAO_Messaging.pc
+usr/lib/pkgconfig/TAO_CSD_Framework.pc
+usr/lib/pkgconfig/TAO_PI_Server.pc
+usr/lib/pkgconfig/TAO_ObjRefTemplate.pc
+usr/lib/pkgconfig/TAO_DynamicAny.pc
+usr/lib/pkgconfig/TAO_Monitor.pc
+usr/lib/pkgconfig/TAO_Compression.pc
+usr/lib/pkgconfig/TAO_Strategies.pc
+usr/lib/pkgconfig/TAO_IORTable.pc
+usr/lib/pkgconfig/TAO_CSD_ThreadPool.pc
+usr/lib/pkgconfig/TAO_CodecFactory.pc
+usr/lib/pkgconfig/TAO_EndpointPolicy.pc
+usr/lib/pkgconfig/TAO_IORManip.pc
+usr/lib/pkgconfig/TAO_ZIOP.pc
+usr/lib/pkgconfig/TAO_DiffServPolicy.pc
+usr/lib/pkgconfig/TAO_PI.pc
+usr/lib/pkgconfig/TAO_ETCL.pc
+usr/lib/pkgconfig/TAO_Utils.pc
