@@ -68,3 +68,51 @@ usr/lib/libTAO_ImR_Activator.so
 usr/lib/libTAO_ImR_Locator.so
 usr/lib/libTAO_ImR_Locator_IDL.so
 usr/lib/libTAO_ImR_Activator_IDL.so
+usr/lib/pkgconfig/TAO_CosLoadBalancing.pc
+usr/lib/pkgconfig/TAO_CosConcurrency_Serv.pc
+usr/lib/pkgconfig/TAO_CosEvent.pc
+usr/lib/pkgconfig/TAO_DsLogAdmin_Skel.pc
+usr/lib/pkgconfig/TAO_DsEventLogAdmin.pc
+usr/lib/pkgconfig/TAO_CosProperty_Skel.pc
+usr/lib/pkgconfig/TAO_CosEvent_Serv.pc
+usr/lib/pkgconfig/TAO_IFR_Client.pc
+usr/lib/pkgconfig/TAO_CosNotification_Skel.pc
+usr/lib/pkgconfig/TAO_DsNotifyLogAdmin_Serv.pc
+usr/lib/pkgconfig/TAO_CosTime_Skel.pc
+usr/lib/pkgconfig/TAO_RTEventLogAdmin_Skel.pc
+usr/lib/pkgconfig/TAO_CosProperty.pc
+usr/lib/pkgconfig/TAO_CosLifeCycle_Skel.pc
+usr/lib/pkgconfig/TAO_RTEvent_Skel.pc
+usr/lib/pkgconfig/TAO_FaultTolerance.pc
+usr/lib/pkgconfig/TAO_RTEvent.pc
+usr/lib/pkgconfig/TAO_CosNaming.pc
+usr/lib/pkgconfig/TAO_CosConcurrency_Skel.pc
+usr/lib/pkgconfig/TAO_FT_ServerORB.pc
+usr/lib/pkgconfig/TAO_DsLogAdmin.pc
+usr/lib/pkgconfig/TAO_DsEventLogAdmin_Skel.pc
+usr/lib/pkgconfig/TAO_FT_ClientORB.pc
+usr/lib/pkgconfig/TAO_CosTrading_Skel.pc
+usr/lib/pkgconfig/TAO_CosNotification.pc
+usr/lib/pkgconfig/TAO_CosTrading.pc
+usr/lib/pkgconfig/TAO_CosTime_Serv.pc
+usr/lib/pkgconfig/TAO_CosNaming_Skel.pc
+usr/lib/pkgconfig/TAO_CosProperty_Serv.pc
+usr/lib/pkgconfig/TAO_DsNotifyLogAdmin_Skel.pc
+usr/lib/pkgconfig/TAO_ImR_Client.pc
+usr/lib/pkgconfig/TAO_CosEvent_Skel.pc
+usr/lib/pkgconfig/TAO_CosNotification_Serv.pc
+usr/lib/pkgconfig/TAO_FTORB_Utils.pc
+usr/lib/pkgconfig/TAO_CosConcurrency.pc
+usr/lib/pkgconfig/TAO_DsNotifyLogAdmin.pc
+usr/lib/pkgconfig/TAO_CosNaming_Serv.pc
+usr/lib/pkgconfig/TAO_DsLogAdmin_Serv.pc
+usr/lib/pkgconfig/TAO_CosTime.pc
+usr/lib/pkgconfig/TAO_RTPortableServer.pc
+usr/lib/pkgconfig/TAO_RTEvent_Serv.pc
+usr/lib/pkgconfig/TAO_CosTrading_Serv.pc
+usr/lib/pkgconfig/TAO_CosLifeCycle.pc
+usr/lib/pkgconfig/TAO_DsEventLogAdmin_Serv.pc
+usr/lib/pkgconfig/TAO_RTEventLogAdmin.pc
+usr/lib/pkgconfig/TAO_RTEventLogAdmin_Serv.pc
+usr/lib/pkgconfig/TAO_RTCORBA.pc
+usr/lib/pkgconfig/TAO_Svc_Utils.pc
