@@ -1,6 +1,7 @@
 ace (5.7.7-3) unstable; urgency=low
   [Marek Brudka]
-  * Configuration file for KFreeBSD created. Shall fix: #591586.
+  * Configuration file for KFreeBSD created. Fixes #591586.
+  * Restored pkgconfig files. Fixes #591610.
 
  -- Marek Brudka <mbrudka@aster.pl>  Thu, 04 Aug 2010 11:12:57 +0200
 
